# argent

./: .gitignore  README.md  argent.py  pyproject.toml  test.ipynb  test.py
config/: argent_base_cfg.yml
data/: bipar.py  booksum.py  mctest.py  narrative_qa.py  qa_document.py
learn/: hf_pipeline.py
