[tool.poetry]
name = "argent"
version = "0.1.0"
description = "Knowledge graph generation from narratives using LLMs."
authors = ["Christopher Cervantes <cmcervantes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5"
transformers = "^4.48"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"